; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/opcodes/extr_cgen-asm.c_cgen_validate_signed_integer.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/opcodes/extr_cgen-asm.c_cgen_validate_signed_integer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cgen_validate_signed_integer.buf = internal global [100 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [51 x i8] c"operand out of range (%ld not between %ld and %ld)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @cgen_validate_signed_integer(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = icmp slt i64 %8, %9
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %7, align 8
  %14 = icmp sgt i64 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %11, %3
  %16 = call i8* @_(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @sprintf(i8* getelementptr inbounds ([100 x i8], [100 x i8]* @cgen_validate_signed_integer.buf, i64 0, i64 0), i8* %16, i64 %17, i64 %18, i64 %19)
  store i8* getelementptr inbounds ([100 x i8], [100 x i8]* @cgen_validate_signed_integer.buf, i64 0, i64 0), i8** %4, align 8
  br label %22

21:                                               ; preds = %11
  store i8* null, i8** %4, align 8
  br label %22

22:                                               ; preds = %21, %15
  %23 = load i8*, i8** %4, align 8
  ret i8* %23
}

declare dso_local i32 @sprintf(i8*, i8*, i64, i64, i64) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
